# poshub-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
openapi/: poshub_v1.json
src/: main.py
src/poshub_api/demo/: client.py  exceptions.py  router.py  schemas.py  service.py
src/poshub_api/orders/: auth.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
tests/: test_external_service.py  test_health.py  test_orders.py
