[project]
name = "poshub-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Cinex10",email = "y.driss@esi-sba.dz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[tool.poetry]
packages = [{include = "poshub_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
