[project]
name = "poshub-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Cinex10",email = "y.driss@esi-sba.dz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "poshub_api", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
asgi-lifespan = "^2.1.0"
coverage = "^7.9.1"
trio = "^0.30.0"
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 79

[tool.isort]
multi_line_output= 3
include_trailing_comma= true
force_grid_wrap= 0
use_parentheses= true
ensure_newline_before_comments= true
line_length= 79
split_on_trailing_comma= true